--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,10 @@
     "require": {
         "php": "^7.2",
         "adam-paterson/oauth2-slack": "^1.1.3",
-        "bugsnag/bugsnag-symfony": "dev-symfony-5",
+        "bugsnag/bugsnag-symfony": "^1.6.2",
         "iflorespaz/oauth2-zoom": "dev-master",
         "jolicode/slack-php-api": "^3.0",
-        "nelmio/security-bundle": "dev-symfony5-simple",
+        "nelmio/security-bundle": "^2.10.1",
         "nyholm/psr7": "^1.2",
         "predis/predis": "^1.1",
         "restcord/restcord": "^0.3",
@@ -51,14 +51,6 @@
         "symfony/web-server-bundle": "~4.4"
     },
     "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/pyrech/bugsnag-symfony"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/damienalexandre/NelmioSecurityBundle"
-        },
         {
             "type": "vcs",
             "url": "https://github.com/jiminny/oauth2-zoom"
