--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,14 +1,18 @@
+# see https://symfony.com/doc/current/reference/configuration/framework.html
 framework:
     secret: '%env(APP_SECRET)%'
-    #default_locale: en
-    #csrf_protection: ~
+    #csrf_protection: true
     #http_method_override: true
-    #trusted_hosts: ~
-    # https://symfony.com/doc/current/reference/configuration/framework.html#handler-id
+
+    # Enables session support. Note that the session will ONLY be started if you read or write from it.
+    # Remove or comment this section to explicitly disable session support.
     session:
         handler_id: session.handler.predis
         name: santaSession
-    #esi: ~
-    #fragments: ~
+        cookie_secure: auto
+        cookie_samesite: lax
+
+    #esi: true
+    #fragments: true
     php_errors:
         log: true
