--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         }
     },
     "require": {
-        "php": "^7.2",
+        "php": "^7.4",
         "adam-paterson/oauth2-slack": "^1.1.3",
         "bugsnag/bugsnag-symfony": "^1.6.2",
         "iflorespaz/oauth2-zoom": "dev-master",
@@ -28,26 +28,25 @@
         "nyholm/psr7": "^1.2",
         "predis/predis": "^1.1",
         "restcord/restcord": "^0.3",
-        "sensio/framework-extra-bundle": "^5.2",
-        "symfony/asset": "^5.0",
-        "symfony/console": "^5.0",
+        "symfony/asset": "*",
+        "symfony/console": "*",
         "symfony/flex": "^1.4",
-        "symfony/framework-bundle": "^5.0",
-        "symfony/http-client": "^5.0",
+        "symfony/framework-bundle": "*",
+        "symfony/http-client": "*",
         "symfony/monolog-bundle": "^3.3",
-        "symfony/twig-bundle": "^5.0",
-        "symfony/yaml": "5.0 as 4.4",
+        "symfony/twig-bundle": "*",
+        "symfony/yaml": "*",
         "twig/twig": "^2.12",
         "wohali/oauth2-discord-new": "^1.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.15",
-        "symfony/browser-kit": "^5.0",
-        "symfony/css-selector": "^5.0",
-        "symfony/dotenv": "^5.0",
-        "symfony/phpunit-bridge": "^5.0",
-        "symfony/stopwatch": "^5.0",
-        "symfony/web-profiler-bundle": "^5.0",
+        "symfony/browser-kit": "*",
+        "symfony/css-selector": "*",
+        "symfony/dotenv": "*",
+        "symfony/phpunit-bridge": "*",
+        "symfony/stopwatch": "*",
+        "symfony/web-profiler-bundle": "*",
         "symfony/web-server-bundle": "~4.4"
     },
     "repositories": [
@@ -57,15 +56,26 @@
         }
     ],
     "config": {
+        "optimize-autoloader": true,
         "preferred-install": {
             "*": "dist"
         },
         "sort-packages": true
     },
+    "replace": {
+        "paragonie/random_compat": "2.*",
+        "symfony/polyfill-ctype": "*",
+        "symfony/polyfill-iconv": "*",
+        "symfony/polyfill-php72": "*",
+        "symfony/polyfill-php71": "*",
+        "symfony/polyfill-php70": "*",
+        "symfony/polyfill-php56": "*"
+    },
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd",
+            "assets:install %PUBLIC_DIR%": "symfony-cmd"
         },
         "post-install-cmd": [
             "@auto-scripts"
@@ -81,8 +91,8 @@
     },
     "extra": {
         "symfony": {
-            "id": "01BJXX8ZDDPMDF82T76S0FA56S",
-            "allow-contrib": false
+            "allow-contrib": false,
+            "require": "5.1.*"
         }
     }
 }
