--- a/config/packages/test/framework.yaml
+++ b/config/packages/test/framework.yaml
@@ -1,5 +1,4 @@
 framework:
-    test: ~
+    test: true
     session:
         storage_id: session.storage.mock_file
-        handler_id: session.handler.native_file
