--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,3 +1,6 @@
+# This file is the entry point to configure your own services.
+# Files in the packages/ subdirectory configure your dependencies.
+
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
@@ -6,13 +9,8 @@ parameters:
 services:
     # default configuration for services in *this* file
     _defaults:
-        # automatically injects dependencies in your services
-        autowire: true
-        # automatically registers your services as commands, event subscribers, etc.
-        autoconfigure: true
-        # this means you cannot fetch services directly from the container via $container->get()
-        # if you need to do this, you can override this setting on individual services
-        public: false
+        autowire: true      # Automatically injects dependencies in your services.
+        autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.# automatically injects dependencies in your services
         bind:
             iterable $applications: !tagged_iterator secret_santa.application
             string $zoomBotJid: '%env(ZOOM_BOT_JID)%'
@@ -24,19 +22,21 @@ services:
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     JoliCode\SecretSanta\:
-        resource: '../src/*'
-        # you can exclude directories or files
-        # but if a service is unused, it's removed anyway
-        exclude: '../src/{Entity,Repository,Tests}'
+        resource: '../src/'
+        exclude:
+            - '../src/DependencyInjection/'
+            - '../src/Entity/'
+            - '../src/Kernel.php'
+            - '../src/Tests/'
 
-    # controllers are imported separately to make sure they're public
-    # and have a tag that allows actions to type-hint services
+    # controllers are imported separately to make sure services can be injected
+    # as action arguments even if you don't extend any base controller class
     JoliCode\SecretSanta\Controller\:
-        resource: '../src/Controller'
-        public: true
+        resource: '../src/Controller/'
         tags: ['controller.service_arguments']
 
-    # add more services, or override services that need manual wiring
+    # add more service definitions when explicit configuration is needed
+    # please note that last definitions always *replace* previous ones
     JoliCode\SecretSanta\Controller\SantaController:
         public: true
 
