Setup docker infrastructure

--- a/.env
+++ b/.env
@@ -19,8 +19,7 @@ DISCORD_CLIENT_ID=
 DISCORD_CLIENT_SECRET=
 DISCORD_BOT_TOKEN=
 
-# default `redis://localhost:6379`
-REDIS_URL=
+REDIS_URL=redis://redis:6379
 
 BUGSNAG_KEY=
 BUGSNAG_STAGE=development
