--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,3 +1,6 @@
 twig:
     default_path: '%kernel.project_dir%/templates'
     debug: '%kernel.debug%'
+    globals:
+        bugsnag_api_key: '%env(BUGSNAG_KEY)%'
+        bugsnag_release_stage: '%env(BUGSNAG_STAGE)%'
