Setup phpstan and fix reported errors

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ before_install:
 
 script:
     - ~/.local/bin/pipenv run inv tests
+    - ~/.local/bin/pipenv run inv qa
     - ~/.local/bin/pipenv run inv cs
 
 branches:
