Enable trusted proxies locally because Apache does not force HTTPS=on

--- a/.env
+++ b/.env
@@ -31,6 +31,6 @@ ZOOM_BOT_JID=
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=98d174d70d76f824a2a601b715cbc53b
-#TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
+TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
 ###< symfony/framework-bundle ###
