--- a/composer.json
+++ b/composer.json
@@ -47,9 +47,11 @@
         "phpstan/phpstan-symfony": "^0.12.8",
         "symfony/browser-kit": "*",
         "symfony/css-selector": "*",
+        "symfony/debug-bundle": "^5.1",
         "symfony/dotenv": "*",
         "symfony/phpunit-bridge": "*",
         "symfony/stopwatch": "*",
+        "symfony/var-dumper": "^5.1",
         "symfony/web-profiler-bundle": "*",
         "symfony/web-server-bundle": "~4.4"
     },
