Add maintenance feature

--- a/.env
+++ b/.env
@@ -28,6 +28,9 @@ ZOOM_CLIENT_ID=
 ZOOM_CLIENT_SECRET=
 ZOOM_BOT_JID=
 
+# 0 for no maintenance, 1 to prevent only run action, 2 for global maintenance
+MAINTENANCE_MODE=0
+
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=98d174d70d76f824a2a601b715cbc53b
