--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -74,3 +74,7 @@ discord_authenticate:
 zoom_authenticate:
     path:     /auth/zoom
     controller: JoliCode\SecretSanta\Controller\ZoomController::authenticate
+
+zoom_pre_auth_warning:
+    path:     /intro/zoom
+    controller: JoliCode\SecretSanta\Controller\ZoomController::preAuthWarning
