--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,7 @@ invoke = ">=1.4"
 # https://github.com/docker/compose/issues/6839
 colorama = {version = ">=0.4, <1"}
 pypiwin32 = {version = "*", sys_platform = "== 'win32'"}
-pywin32 = {version = "*", sys_platform = "== 'win32'"}
+#pywin32 = {version = "*", sys_platform = "== 'win32'"}
 
 [requires]
 python_version = "3"
