Update Docker infrastructure

--- a/infrastructure/docker/services/builder/Dockerfile
+++ b/infrastructure/docker/services/builder/Dockerfile
@@ -2,7 +2,7 @@ ARG PROJECT_NAME
 
 FROM ${PROJECT_NAME}_php-base
 
-ARG NODEJS_VERSION=12.x
+ARG NODEJS_VERSION=14.x
 RUN echo "deb https://deb.nodesource.com/node_${NODEJS_VERSION} buster main" > /etc/apt/sources.list.d/nodejs.list \
     && apt-key adv --fetch-keys https://deb.nodesource.com/gpgkey/nodesource.gpg.key
 
@@ -24,6 +24,8 @@ RUN pip3 install pycodestyle
 
 # Config
 COPY etc/. /etc/
+ARG PHP_VERSION
+COPY php-configuration /etc/php/${PHP_VERSION}
 RUN adduser app sudo \
     && mkdir /var/log/php \
     && chmod 777 /var/log/php \
@@ -31,8 +33,7 @@ RUN adduser app sudo \
     && phpenmod app-builder
 
 # Composer
-COPY --from=composer:2.0.7 /usr/bin/composer /usr/bin/composer
-
+COPY --from=composer/composer:2.1.3 /usr/bin/composer /usr/bin/composer
 RUN mkdir -p "/home/app/.composer/cache" \
     && chown app: /home/app/.composer -R
 
