--- a/infrastructure/docker/services/frontend/etc/apache2/sites-available/000-default.conf
+++ b/infrastructure/docker/services/frontend/etc/apache2/sites-available/000-default.conf
@@ -15,7 +15,7 @@ ServerName localhost
     </FilesMatch>
 
     <FilesMatch "\.php$">
-        SetHandler  "proxy:unix:/run/php/php7.4-fpm.sock|fcgi://localhost/"
+        SetHandler  "proxy:fcgi://localhost:9000"
     </FilesMatch>
   
     <Proxy "fcgi://localhost/" enablereuse=on max=10>
