--- a/infrastructure/docker/services/php-base/Dockerfile
+++ b/infrastructure/docker/services/php-base/Dockerfile
@@ -1,11 +1,11 @@
-FROM debian:buster-slim
+FROM debian:10.9-slim
 
 RUN apt-get update \
     && apt install -y --no-install-recommends \
         ca-certificates \
         gnupg \
     && echo "deb https://packages.sury.org/php buster main" > /etc/apt/sources.list.d/sury.list \
-    && apt-key adv --keyserver keyserver.ubuntu.com --recv-keys B188E2B695BD4743
+    && apt-key adv --fetch-keys https://packages.sury.org/php/apt.gpg
 
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
@@ -13,16 +13,20 @@ RUN apt-get update \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
 
-ARG PHP_VERSION=7.4
+ARG PHP_VERSION
+
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
         php${PHP_VERSION}-apcu \
+        php${PHP_VERSION}-bcmath \
+        php${PHP_VERSION}-cli \
         php${PHP_VERSION}-common \
         php${PHP_VERSION}-curl \
         php${PHP_VERSION}-iconv \
         php${PHP_VERSION}-intl \
         php${PHP_VERSION}-mbstring \
         php${PHP_VERSION}-pgsql \
+        php${PHP_VERSION}-uuid \
         php${PHP_VERSION}-xml \
         php${PHP_VERSION}-zip \
     && apt-get clean \
@@ -34,4 +38,4 @@ RUN addgroup --gid 1000 app && \
     adduser --system --uid $USER_ID --home /home/app --shell /bin/bash app
 
 # Configuration
-COPY etc/. /etc/
+COPY php-configuration /etc/php/${PHP_VERSION}
