--- a/infrastructure/docker/docker-compose.yml
+++ b/infrastructure/docker/docker-compose.yml
@@ -16,6 +16,8 @@ services:
             - redis
         volumes:
             - "../../${PROJECT_DIRECTORY}:/home/app/application:cached"
+        environment:
+            - "PHP_VERSION=${PHP_VERSION}"
         labels:
             - "traefik.enable=true"
             - "traefik.http.routers.${PROJECT_NAME}-frontend.rule=Host(${PROJECT_DOMAINS})"
