--- a/infrastructure/docker/services/frontend/php-configuration/fpm/php-fpm.conf
+++ b/infrastructure/docker/services/frontend/php-configuration/fpm/php-fpm.conf
@@ -1,14 +1,12 @@
 [global]
-pid        = /var/run/php7-fpm.pid
+pid        = /var/run/php-fpm.pid
 error_log  = /proc/self/fd/2
 daemonize  = no
 
 [www]
 user   = app
 group  = app
-listen = /run/php/php7.4-fpm.sock
-listen.owner = www-data
-listen.group = www-data
+listen = 127.0.0.1:9000
 pm = dynamic
 pm.max_children = 4
 pm.start_servers = 2
