--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -7,6 +7,7 @@ framework:
     # Enables session support. Note that the session will ONLY be started if you read or write from it.
     # Remove or comment this section to explicitly disable session support.
     session:
+        storage_factory_id: session.storage.factory.native
         handler_id: session.handler.predis
         name: santaSession
         cookie_secure: auto
