--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
             - uses: actions/setup-python@v2
               with:
                   python-version: '3.x'
-            - run: pip install pipenv
+            - run: pip3 install pipenv
 
             # Install the stack and run the tests
             - run: pipenv install --deploy --dev
