Specify pythin version on pipenv install

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
             - run: pip3 install pipenv
 
             # Install the stack and run the tests
-            - run: pipenv install --deploy --dev
+            - run: pipenv --three install --deploy --dev
             - run: pipenv run inv start && sleep 5
             - run: pipenv run inv tests
             - run: pipenv run inv qa
