--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,11 +51,11 @@ jobs:
             # Setup
             - uses: actions/setup-python@v2
               with:
-                  python-version: '3.x'
+                  python-version: '3.9'
             - run: pip3 install pipenv
 
             # Install the stack and run the tests
-            - run: pipenv --three install --deploy --dev
+            - run: pipenv install --deploy --dev
             - run: pipenv run inv start && sleep 5
             - run: pipenv run inv tests
             - run: pipenv run inv qa
