Try using MockFile for test session

--- a/config/services_test.yaml
+++ b/config/services_test.yaml
@@ -7,4 +7,4 @@ services:
     # aliases are prefixed with test. For example:
     #
     # test.App\Service\MyService: '@App\Service\MyService'
-    test.Symfony\Component\HttpFoundation\RequestStack: '@Symfony\Component\HttpFoundation\RequestStack'
+    test.session.storage.factory.mock_file: '@session.storage.factory.mock_file'
