--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "php": "^8.0",
         "adam-paterson/oauth2-slack": "^1.1.3",
         "bugsnag/bugsnag-symfony": "^1.6.2",
+        "doctrine/annotations": "^1.13",
         "iflorespaz/oauth2-zoom": "dev-master",
         "jolicode/slack-php-api": "^4.0",
         "nelmio/security-bundle": "^2.10.1",
