Ignore phpstan error

--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -13,4 +13,7 @@ parameters:
     bootstrapFiles:
        - vendor/bin/.phpunit/phpunit-9.5-0/vendor/autoload.php
 
-    ignoreErrors: []
+    ignoreErrors:
+        -
+         message: '#Service "session" is not registered in the container.#'
+         path: tests/Controller/SessionPrepareTrait.php
