Replace current inputs with Symfony forms

--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "symfony/asset": "*",
         "symfony/console": "*",
         "symfony/flex": "^1.4",
+        "symfony/form": "*",
         "symfony/framework-bundle": "*",
         "symfony/http-client": "*",
         "symfony/monolog-bundle": "^3.3",
@@ -50,6 +51,7 @@
         "symfony/css-selector": "*",
         "symfony/debug-bundle": "*",
         "symfony/dotenv": "*",
+        "symfony/maker-bundle": "^1.33",
         "symfony/phpunit-bridge": "*",
         "symfony/stopwatch": "*",
         "symfony/var-dumper": "*",
