--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
         "symfony/http-client": "*",
         "symfony/monolog-bundle": "^3.3",
         "symfony/twig-bundle": "*",
+        "symfony/validator": "5.3.*",
         "symfony/yaml": "*",
         "twig/twig": "^3.3",
         "wohali/oauth2-discord-new": "^1.0"
