--- a/composer.json
+++ b/composer.json
@@ -32,10 +32,12 @@
         "symfony/asset": "*",
         "symfony/console": "*",
         "symfony/flex": "^1.4",
+        "symfony/form": "*",
         "symfony/framework-bundle": "*",
         "symfony/http-client": "*",
         "symfony/monolog-bundle": "^3.3",
         "symfony/twig-bundle": "*",
+        "symfony/validator": "5.3.*",
         "symfony/yaml": "*",
         "twig/twig": "^3.3",
         "wohali/oauth2-discord-new": "^1.0"
@@ -50,6 +52,7 @@
         "symfony/css-selector": "*",
         "symfony/debug-bundle": "*",
         "symfony/dotenv": "*",
+        "symfony/maker-bundle": "^1.33",
         "symfony/phpunit-bridge": "*",
         "symfony/stopwatch": "*",
         "symfony/var-dumper": "*",
