--- a/infrastructure/docker/docker-compose.builder.yml
+++ b/infrastructure/docker/docker-compose.builder.yml
@@ -13,6 +13,7 @@ services:
             - redis
         environment:
             - COMPOSER_MEMORY_LIMIT=-1
+            - PHP_CS_FIXER_IGNORE_ENV=1
         volumes:
             - "../../${PROJECT_DIRECTORY}:/home/app/application:cached"
             - "${COMPOSER_CACHE_DIR}:/home/app/.composer/cache"
