--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -25,3 +25,8 @@ when@test:
         test: true
         session:
             storage_factory_id: session.storage.factory.mock_file
+
+    services:
+        test.session.storage.factory.mock_file:
+            alias : session.storage.factory.mock_file
+            public: true
