--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,11 +1,19 @@
 faq:
-  path:     /faq
-  controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
-  defaults:
-    template: content/faq.html.twig
+    path:     /faq
+    controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
+    defaults:
+        template: content/faq.html.twig
 
 sitemap:
-  path:     /sitemap.xml
-  controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
-  defaults:
-    template: content/sitemap.xml.twig
+    path:     /sitemap.xml
+    controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
+    defaults:
+        template: content/sitemap.xml.twig
+
+controllers:
+    resource: ../src/Controller/
+    type: annotation
+
+kernel:
+    resource: ../src/Kernel.php
+    type: annotation
