--- a/composer.json
+++ b/composer.json
@@ -74,7 +74,12 @@
         "preferred-install": {
             "*": "dist"
         },
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "phpstan/extension-installer": true,
+            "symfony/flex": true,
+            "symfony/runtime": true
+        }
     },
     "replace": {
         "paragonie/random_compat": "2.*",
