--- a/composer.json
+++ b/composer.json
@@ -23,47 +23,41 @@
         "adam-paterson/oauth2-slack": "^1.1",
         "bugsnag/bugsnag-symfony": "^1.10",
         "doctrine/annotations": "^1.13",
-        "jolicode/slack-php-api": "^4.4",
-        "nelmio/security-bundle": "dev-support-symfony-6",
-        "nyholm/psr7": "^1.4",
-        "predis/predis": "^1.1",
+        "jolicode/slack-php-api": "^4.5",
+        "nelmio/security-bundle": "^3.0",
+        "nyholm/psr7": "^1.5",
+        "predis/predis": "^2.0",
         "restcord/restcord": "dev-develop",
         "symfony/asset": "*",
         "symfony/console": "*",
-        "symfony/flex": "^2.0",
+        "symfony/flex": "^2.2",
         "symfony/form": "*",
         "symfony/framework-bundle": "*",
         "symfony/http-client": "*",
-        "symfony/monolog-bundle": "^3.7",
+        "symfony/monolog-bundle": "^3.8",
         "symfony/runtime": "*",
         "symfony/twig-bundle": "*",
         "symfony/validator": "*",
         "symfony/yaml": "*",
-        "twig/twig": "^3.3",
+        "twig/twig": "^3.4",
         "wohali/oauth2-discord-new": "^1.1"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.4",
+        "friendsofphp/php-cs-fixer": "^3.12",
         "phpstan/extension-installer": "^1.1",
-        "phpstan/phpstan": "^1.5",
+        "phpstan/phpstan": "^1.8",
         "phpstan/phpstan-phpunit": "^1.1",
-        "phpstan/phpstan-symfony": "^1.1.8",
+        "phpstan/phpstan-symfony": "^1.2",
         "symfony/browser-kit": "*",
         "symfony/css-selector": "*",
         "symfony/debug-bundle": "*",
         "symfony/dotenv": "*",
-        "symfony/maker-bundle": "^1.36",
+        "symfony/maker-bundle": "^1.47",
         "symfony/phpunit-bridge": "*",
         "symfony/stopwatch": "*",
         "symfony/var-dumper": "*",
         "symfony/web-profiler-bundle": "*"
     },
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/pyrech/NelmioSecurityBundle"
-        }
-    ],
     "config": {
         "optimize-autoloader": true,
         "preferred-install": {
@@ -106,7 +100,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "6.0.*"
+            "require": "6.1.*"
         }
     }
 }
