--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -12,8 +12,4 @@ sitemap:
 
 controllers:
     resource: ../src/Controller/
-    type: annotation
-
-kernel:
-    resource: ../src/Kernel.php
-    type: annotation
+    type: attribute
