--- a/infrastructure/docker/services/frontend/php-configuration/fpm/php-fpm.conf
+++ b/infrastructure/docker/services/frontend/php-configuration/fpm/php-fpm.conf
@@ -8,11 +8,12 @@ user   = app
 group  = app
 listen = 127.0.0.1:9000
 pm = dynamic
-pm.max_children = 4
+pm.max_children = 25
 pm.start_servers = 2
 pm.min_spare_servers = 2
 pm.max_spare_servers = 3
 pm.max_requests = 500
+pm.status_path = /php-fpm-status
 clear_env  = no
 request_terminate_timeout = 120s
 catch_workers_output = yes
