--- a/infrastructure/docker/docker-compose.yml
+++ b/infrastructure/docker/docker-compose.yml
@@ -8,10 +8,13 @@ services:
         build: services/router
         volumes:
             - "/var/run/docker.sock:/var/run/docker.sock"
+            - "./services/router/certs:/etc/ssl/certs"
         network_mode: host
 
     frontend:
-        build: services/frontend
+        build:
+            context: services/php
+            target: frontend
         depends_on:
             - redis
         volumes:
